[package]
name = "shiba"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
image = "0.23.14"
show-image = { version = "0.9.3", features = ["image"] }

[profile.release]
opt-level = "z" # Optimize for size.
lto = true
